<resources>
    <string name="app_name">repo</string>
    <string name="ava_content_description">Аватар</string>
    <string name="profile_title">Профиль</string>
    <string name="edit_button_content_description">edit button</string>
    <string name="birth_date_label">Дата рождения</string>
    <string name="field_of_activity_label">Сфера деятельности</string>
    <string name="get_push_notification_label">Получать push-уведомления</string>
    <string name="your_friends_label">Ваши друзья</string>
    <string name="logout_btn_text">Выйти из аккаунта</string>
    <string name="app_logo_content_description">app logo</string>
    <string name="loading_label">Загрузка…</string>
    <string name="company_logo_content_description">company logo</string>
    <string name="field_of_activity_template">Хирургия, травмотология</string>
    <string name="birth_date_template">01 февраля 1980</string>
    <string name="user_name_template">Константинов Денис</string>
    <string name="bottom_nav_news_title">Новости</string>
    <string name="bottom_nav_search_title">Поиск</string>
    <string name="bottom_nav_help_title">Помочь</string>
    <string name="bottom_nav_history_title">История</string>
    <string name="bottom_nav_profile_title">Профиль</string>
    <string name="help_title">Помочь</string>
    <string name="choose_category_of_helping_text">Выберете категорию помощи</string>
    <string name="dialog_delete_item_label">Удалить</string>
    <string name="dialog_make_photo_item_label">Сделать снимок</string>
    <string name="dialog_choose_photo_item_label">Выбрать фото</string>
    <string name="tab_by_event">По мероприятиям</string>
    <string name="tab_by_nko">По НКО</string>
    <string name="key_label_template">Ключевые слова: мастер-класс, помощь</string>
    <string name="result_label_template">Результаты поиска: 109 мероприятий</string>
    <string name="cheese">cheese</string>
    <string name="category_icon_description">category icon</string>
    <string name="organization_description">description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_title">Новости</string>
    <string name="filter_label">Категории помощи</string>
    <string name="filter_title">Фильтр</string>
    <string name="mail_label">У вас есть вопросы?</string>
    <string name="mail_post_label">Напишите нам</string>
    <string name="link_label">Перейти на сайт организаии</string>
    <string name="quantity_template">+102</string>
    <string name="help_cloth">Помочь вещами</string>
    <string name="become_vol">Стать волонтером</string>
    <string name="prof_hellp">Проф помощь</string>
    <string name="help_money">Помочь деньгами</string>
    <string name="auth_title">Авторизация</string>
    <string name="auth_invite_text">Для участия в мероприятиях войдите в приложение через социальые сети</string>
    <string name="auth_invite_text2">Или авторизуйтесь через приложение</string>
    <string name="email_label">E-mail</string>
    <string name="email_edit_text_hint">Введите e-mail</string>
    <string name="password_label">Пароль</string>
    <string name="password_edit_text_hint">Введите пароль</string>
    <string name="auth_btn_text">войти</string>
    <string name="forgot_password_btn_text">Забыли пароль?</string>
    <string name="register_btn_text">Регистрация</string>
    <string name="invite_to_search_text">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="invite_to_search_example_label">Например,</string>
    <string name="invite_to_search_example">мастер-класс, помощь</string>
    <string name="choose_money_lable">Выберите размер пожертвования</string>
    <string name="input_money_lable">или введите нужную сумму</string>
    <string name="input_money_placeholder">Введите сумму</string>
    <string name="choose_money_header">Спасибо за решение помочь!</string>
    <string name="dialog_dismiss_btn_text">Отмена</string>
    <string name="dialog_transact_btn_text">Перевести</string>
    <string name="currency_postfix"> ₽</string>
    <string name="thanks_for_donation">Спасибо, что пожертвовали </string>
    <string name="invite_for_donate"> ₽! Будем очень признательны, если вы сможете пожертвовать еще больше.</string>
    <string name="remind_later_btn_text">Напомнить позже</string>
    <string name="remind_invite_for_donation">Напоминаем, что мы будем очень признательны, если вы сможете пожертвовать еще больше.</string>
</resources>