<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigationNews"
        android:icon="@drawable/ic_list_bulleted"
        android:title="@string/bottom_nav_news_title"/>
    <item android:id="@+id/navigationSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_nav_search_title"/>
    <item android:id="@+id/navigationHelp"
        android:icon="@drawable/ic_help"
        android:title="@string/bottom_nav_help_title"/>
    <item android:id="@+id/navigationHistory"
        android:icon="@drawable/ic_history"
        android:title="@string/bottom_nav_history_title"/>
    <item android:id="@+id/navigationAccount"
        android:icon="@drawable/ic_account"
        android:title="@string/bottom_nav_profile_title"/>
</menu>