<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsedToolBar2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways">
                <RelativeLayout
                    android:id="@+id/toolBarContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolBar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/tool_bar_height"
                        android:background="@color/light_green"
                        app:subtitleCentered="true"
                        app:menu="@menu/tool_bar"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/profile_title"
                        android:textAppearance="@style/TextStyle2" />

                </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsedToolBar1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_height"
                android:contentDescription="@string/ava_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/image_man"
                app:layout_collapseMode="parallax"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacing_l" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/user_name_template"
                android:textAppearance="@style/TextStyle12"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/birthDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/birth_date_label"
                android:textAppearance="@style/TextStyle3"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/userName" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/birthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_date_template"
                android:textAppearance="@style/TextStyle8"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/birthDateLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/activityFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_content_spacing"
                android:text="@string/field_of_activity_label"
                android:textAppearance="@style/TextStyle3"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/birthDate" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/activityField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_of_activity_template"
                android:textAppearance="@style/TextStyle8"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/activityFieldLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/getPushNotificationsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxl"
                android:text="@string/get_push_notification_label"
                android:textAppearance="@style/TextStyle8"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/activityField" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                style="@style/SwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/switch_spacer"
                app:layout_constraintBottom_toBottomOf="@+id/getPushNotificationsLabel"
                app:layout_constraintStart_toEndOf="@+id/getPushNotificationsLabel"
                app:layout_constraintTop_toTopOf="@+id/getPushNotificationsLabel" />

            <View
                android:id="@+id/divider1"
                android:layout_width="@dimen/divider_width"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/spacing_l"
                android:background="@color/cool_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/getPushNotificationsLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/yourFriendsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/your_friends_label"
                android:textAppearance="@style/TextStyle3"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friendsRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/yourFriendsLabel" />

            <View
                android:id="@+id/divider2"
                android:layout_width="@dimen/divider_width"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/spacing_l"
                android:background="@color/cool_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/friendsRV" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_l"
                android:padding="@dimen/spacing_m"
                android:text="@string/logout_btn_text"
                android:textAppearance="@style/TextStyle7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>