<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_layout_width"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/chosePhotoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xxl_2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_xl"
            android:text="@string/dialog_choose_photo_item_label"
            android:textAppearance="@style/TextStyle16"
            app:drawableStartCompat="@drawable/ic_upload" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/makePhotoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/dialog_item_spacing"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_xl"
            android:text="@string/dialog_make_photo_item_label"
            android:textAppearance="@style/TextStyle16"
            app:drawableStartCompat="@drawable/ic_camera" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deletePhotoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/dialog_item_spacing"
        android:layout_marginBottom="@dimen/spacing_xxl"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_xl"
            android:text="@string/dialog_delete_item_label"
            android:textAppearance="@style/TextStyle16"
            app:drawableStartCompat="@drawable/ic_delete" />
    </LinearLayout>

</LinearLayout>